<resources>
    <string name="app_name">Cook with Puppy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cook with Puppy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>
    <string name="add_new_recipe">Add new recipe</string>

    <string name="menu_myrecipe">My recipes</string>
    <string name="menu_search">Search</string>
    <string name="menu_favourite">Favourites</string>
    <string name="menu_about">About</string>
    <string name="no_href">No URL added</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="type_ingredients">Type ingredients with comas</string>
    <string name="label_recipe">Add recipe:</string>
    <string name="title">Title</string>
    <string name="type_title">Type title</string>
    <string name="label_ingredients">Ingredients:</string>
    <string name="label_href">Website:</string>
    <string name="dog">Dog icon</string>
    <string name="add_button">Add to My recipes</string>
    <string name="delete">Delete</string>
    <string name="add_href">Paste URL to the recipe</string>
    <string name="about_description">This application enables you to create your own recipes and search for
    new ones. You can add them to Favourites and enjoy whenever you want.

        \n\n2020 Created by:
        \nAgnieszka Kuźniecow
        \nMichał Grzyśka</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
