<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_myrecipe">

    <fragment
        android:id="@+id/nav_myrecipe"
        android:name="com.example.cookwithpuppy.ui.myrecipes.MyRecipesFragment"
        android:label="@string/menu_myrecipe"
        tools:layout="@layout/fragment_myrecipe" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.cookwithpuppy.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.cookwithpuppy.ui.favourite.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.cookwithpuppy.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>